# tf2-ulmfit

./: .gitignore  README.md  README_AMALG.md  README_old.md  convert_fastai2keras.py  corpus_feeder.py  evaluate_ppl.py  fastai_calculate_ppl.py  fastai_lm_utils.py  fastai_train_text_classifier.py  fastai_ulmfit_train.py  klej_benchmark_utils.py  lm_metrics.py  lm_tokenizers.py  requirements.txt  setup.cfg  ulmfit_commons.py  ulmfit_convert_fastai2keras.py  ulmfit_ppl.py  ulmfit_regressor.py  ulmfit_text_classifier.py  ulmfit_tf2.py  ulmfit_tf2_heads.py  ulmfit_tf_lasthidden_classifier.py  ulmfit_tf_regressor.py  ulmfit_tf_seqtagger.py  ulmfit_tf_seqtagger_dirty.py  ulmfit_tf_seqtagger_old.py  ulmfit_tf_text_classifier.py  ulmfit_train.py  ulmfit_train_text_classifier.py
evaluation_scripts/: calculate_ppl_fastai.py  calculate_ppl_tf.py  corpus_feeder.py
examples/: fastai_train_text_classifier.py  ulmfit_tf_lasthidden_classifier.py  ulmfit_tf_regressor.py  ulmfit_tf_seqtagger.py  ulmfit_tf_text_classifier.py
examples_data/: hotels500.tsv  tagger_labels.json
pretraining_utils/: 01_cleanup.py  02_build_spm.py  03_encode_spm.py  04_demo.py  sequence_utils.py
src/tf2_ulmfit/: convert_fastai2keras.py  fastai_lm_utils.py  fastai_ulmfit_train.py  lm_tokenizers.py  ulmfit_commons.py  ulmfit_tf2.py
tf2_ulmfit/: convert_fastai2keras.py  fastai_lm_utils.py  fastai_ulmfit_train.py  lm_tokenizers.py  ulmfit_commons.py  ulmfit_tf2.py  ulmfit_tf2_heads.py
tf2_ulmfit/evaluation_scripts/: calculate_ppl_fastai.py  calculate_ppl_tf.py
tf2_ulmfit/examples/: ulmfit_tf_regressor.py  (+4 more)
(+8 files in other folders)
