[metadata]
name = tf2_ulmfit
version = 0.1.12
author = Hubert Karbowy
author_email = h.karbowy@edrone.me
description = ULMFiT for TensorFlow 2.x
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/edroneteam/tf2_ulmfit/src/master/
license = Apache Software License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    nltk
    numpy
    pandas
    scikit-learn
    tqdm
    matplotlib
    attr
    tensorflow>=2.4.1
    tensorflow_text>=2.4.3
    tensorflow_hub>=0.12.0
    sentencepiece>=0.1.95
python_requires = >=3.6

[options.packages.find]
where = src
